--- a/PersonnelManagementAPI/PersonnelManagementAPI.csproj
+++ b/PersonnelManagementAPI/PersonnelManagementAPI.csproj
@@ -4,10 +4,17 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Business" />
+      <Folder Include="DataAccess" />
+      <Folder Include="Model" />
     </ItemGroup>
 
 </Project>
