--- a/PersonnelManagementAPI/PersonnelManagementAPI.csproj
+++ b/PersonnelManagementAPI/PersonnelManagementAPI.csproj
@@ -8,13 +8,18 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="12.0.0" />
+        <PackageReference Include="Dapper" Version="2.0.123" />
+        <PackageReference Include="Npgsql" Version="7.0.0-rc.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Business" />
-      <Folder Include="DataAccess" />
-      <Folder Include="Model" />
+      <Folder Include="Controllers\Abstract" />
+      <Folder Include="Core\Controllers\Concrete" />
+      <Folder Include="Mapping" />
+      <Folder Include="Middlewares" />
+      <Folder Include="Models\Dtos" />
     </ItemGroup>
 
 </Project>
