--- a/PersonnelManagementAPI/appsettings.Development.json
+++ b/PersonnelManagementAPI/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+    "AllowedHosts": "*",
+  "PostgreSQL": {
+    "ConnectionString": "server=localhost;port=5432;userid=postgres;database=personelmanagement;",
+    "DbPassword": "admin"
   }
 }
